--- a/seo_proj/package.json
+++ b/seo_proj/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "check-types": "^7.4.0",
+    "cheerio": "^1.0.0-rc.2",
+    "events": "^3.0.0",
     "lodash": "^4.17.11"
   }
 }
