--- a/seo_proj/package.json
+++ b/seo_proj/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "static.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "cheerio": "^1.0.0-rc.2",
     "events": "^3.0.0",
     "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "should": "^13.2.3"
   }
 }
