--- a/seo_proj/package.json
+++ b/seo_proj/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "seo_proj",
-  "version": "1.0.0",
+  "name": "seo_checker",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "static.js"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "check-types": "^7.4.0",
     "cheerio": "^1.0.0-rc.2",
-    "events": "^3.0.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-files": "^1.4.0",
     "mocha": "^5.2.0",
-    "should": "^13.2.3"
+    "mocha-sinon": "^2.1.0",
+    "should": "^13.2.3",
+    "sinon": "^7.1.1",
+    "streamtest": "^1.2.4"
   }
 }
