add readme, add module installation testing, upload testing code, renaming to account relative

--- a/seo_proj/package.json
+++ b/seo_proj/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "seo_checker",
-  "version": "1.0.3",
+  "name": "@glorialin/seo_checker",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
